Wire up the carousel profiles with user_details.html

--- a/templates/components/profile_card.html
+++ b/templates/components/profile_card.html
@@ -1,4 +1,4 @@
-<a href="#">
+<a href="{{url_for('user_details', username=profile.username)}}">
         <div class="card">
             <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
             <div class="card-body">
