--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1080,4 +1080,38 @@ ul ul a {
 .profile-jumbo {
   margin-top: 5vh;
 }
+
+.user-wrapper {
+  padding: 6%;
+  text-align: center;
+  height: 100vh;
+}
+
+.user-content {
+  padding: 5%;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 4px 0px #b0b3b7;
+          box-shadow: 0px 0px 4px 0px #b0b3b7;
+}
+
+.user-image {
+  text-align: center;
+}
+
+.user-image img {
+  border-radius: 50%;
+  height: auto;
+  width: auto;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.user-description {
+  text-align: left;
+}
+
+.user-description p {
+  font-weight: 600;
+  font-size: 30px;
+}
 /*# sourceMappingURL=main.css.map */
