--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -4,6 +4,7 @@
 @import "_about.scss";
 @import "_search.scss";
 @import "_logreg.scss";
-@import "_userarea.scss";
+@import "_user_area.scss";
+@import "_user_details.scss";
 
 // For comments on some of the thought processes behind the CSS, please look at main.css.
