--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1096,14 +1096,15 @@ ul ul a {
 
 .user-image {
   text-align: center;
+  height: 50vh;
 }
 
 .user-image img {
   border-radius: 50%;
   height: auto;
   width: auto;
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 .user-description {
@@ -1113,5 +1114,9 @@ ul ul a {
 .user-description p {
   font-weight: 600;
   font-size: 30px;
+}
+
+.tags {
+  margin-left: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
