--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 image-col">
                         <div class="user-image">
                             <img src="{{user.imgUrl}}" class="profile-pic" alt="profile-image" />
                         </div>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-2">
                 <i class="fa fa-code"></i>
-                <h3>Skills</h3>
+                <h5>Skills</h5>
 
             </div>
 
@@ -37,12 +37,33 @@
             <div class="col-10">
 
                 {% for skill in user.skills %}
-                    {{ skill }}
+                    <span class="tags">{{ skill }}</span>
 
                 {% endfor %}
 
             </div>
         </div>
+
+
+        <div class="row">
+                <div class="col-2">
+                    <i class="fa fa-code"></i>
+                    <h5>Desired skills</h5>
+    
+                </div>
+    
+    
+    
+                <div class="col-10">
+    
+                    {% for skill in user.desiredSkills %}
+                        <span class="tags">{{ skill }}</span>
+    
+                    {% endfor %}
+    
+                </div>
+            </div>
+    
 
 
 
