--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -21,6 +21,7 @@
                 <div class="user-description">
                     <h1> {{user.username}}</h1>
                     <h6>{{user.shortDescription}}</h6>
+                    <h5>District:</h5>{{user.district}}
                 </div>
             </div>
         </div>
@@ -37,7 +38,7 @@
             <div class="col-10">
 
                 {% for skill in user.skills %}
-                    <span class="tags">{{ skill }}</span>
+                <span class="tags">{{ skill }}</span>
 
                 {% endfor %}
 
@@ -46,28 +47,104 @@
 
 
         <div class="row">
-                <div class="col-2">
-                    <i class="fa fa-code"></i>
-                    <h5>Desired skills</h5>
-    
-                </div>
-    
-    
-    
-                <div class="col-10">
-    
-                    {% for skill in user.desiredSkills %}
-                        <span class="tags">{{ skill }}</span>
-    
-                    {% endfor %}
-    
-                </div>
+            <div class="col-2">
+                <i class="fas fa-search"></i>
+                <h5>Desired skills</h5>
+
             </div>
-    
+
+
+
+            <div class="col-10">
+
+                {% for skill in user.desiredSkills %}
+                <span class="tags">{{ skill }}</span>
+
+                {% endfor %}
+
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-2">
+                <i class="fas fa-at"></i>
+                <h5>Communication Style</h5>
+
+            </div>
+
+
+            <div class="col-10">
+                {% for comm in user.communicationStyle %}
+
+                {% if comm == "inperson" %}
+
+                <i class="far fa-comments"></i> In person
+
+                {% endif %}
+
+                {% if comm == "text" %}
+
+                <i class="fas fa-envelope-square"></i> Text
+
+                {% endif %}
+
+                {% if comm == "video" %}
+
+                <i class="fas fa-video"></i> Video
+
+                {% endif %}
+
+                {% endfor %}
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-2">
+                <i class="fas fa-at fa-lg"></i>
+                <h5>Other Details</h5>
+
+            </div>
+
+
+            <div class="col-10">
+                {% for other in user.otherDetails %}
+
+                {% if other == "lookingForCoFounder" %}
+
+                <i class="fas fa-briefcase fa-lg"></i> Looking for Co-Founder
+
+                {% endif %}
+
+                {% if other == "availableForHire" %}
+
+                <i class="fas fa-money-bill"></i> Available for Hire
+
+                {% endif %}
+
+                {% if other == "availableForProjectWork" %}
+
+                <i class="far fa-lightbulb"></i> Available for Project availableForProjectWork
+                {% endif %}
+
+                {% endfor %}
+            </div>
+
+        </div>
 
 
 
     </div>
+
+
+
+
 </div>
+
+
+
+
 
 {% endblock %}
