--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -144,6 +145,13 @@
     <script src="{{url_for('static', filename='js/userarea.js')}}"></script>
 
     {% endif %}
+
+    {% if active == "user_details" %}
+
+    <script src="{{url_for('static', filename='js/user_details.js')}}"></script>
+
+    {% endif %}
+
 
 </body>
 
