Get basic preview template to run.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -319,8 +319,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="publish">Publish
-            your Profile</button>
+        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="preview">Preview your Profile</button>
 
         </form>
 
