--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -176,8 +176,12 @@
 
         <div class="row heart-row justify-content-center">
 
-                <input id="heart" type="checkbox" method="POST" />
-                <label for="heart"><i class="fas fa-heart"></i></label>
+            <form method="POST">
+                <div class="form-check">
+                    <input class="form-check-input" name="favorite" id="heart" type="checkbox" />
+                    <label for="heart"><i class="fas fa-heart"></i></label>
+                </div>
+            </form>
         </div>
 
 
