--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -111,7 +111,7 @@
 
     <!-- Alternative navbar styling for pages other than index and about.-->
 
-    {% elif active == 'search' or active == 'logreg' or active == 'myprofile' or active == 'user_details' %}
+    {% elif active == 'search' or active == 'logreg' or active == 'myprofile' or active == 'user_details' or active == 'preview' %}
 
     <style>
         #navbar.bg-light {
