--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1084,7 +1084,7 @@ ul ul a {
 .user-wrapper {
   padding: 6%;
   text-align: center;
-  height: 150vh;
+  height: 180vh;
 }
 
 .user-content {
@@ -1190,5 +1190,36 @@ ul ul a {
   17.5% {
     font-size: 0;
   }
+}
+
+#preview {
+  margin-bottom: 5vh !important;
+}
+
+.pubdisc-btn {
+  background-color: #11375f !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#74abe6", endColorstr="#10365f");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#74abe6), to(#10365f));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#74abe6), to(#10365f));
+  background-image: linear-gradient(#74abe6, #10365f);
+  border-color: #10365f #10365f #081a2e;
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
+  -webkit-font-smoothing: antialiased;
+  margin: 0 3rem 3rem 3rem;
+}
+
+.pubdisc-btn:hover {
+  background-color: #05081f !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1b2eab", endColorstr="#04081e");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#1b2eab), to(#04081e));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1b2eab), to(#04081e));
+  background-image: linear-gradient(#1b2eab, #04081e);
+  border-color: #04081e #04081e black;
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.52);
+  -webkit-font-smoothing: antialiased;
 }
 /*# sourceMappingURL=main.css.map */
