--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -210,12 +210,13 @@
 
     <div class="col-12 d-flex justify-content-center">
 
-        <button type="submit" class="btn btn-primary btn-large pubdisc-btn" name="btn" value="publish">Publish on
-            tanDev</button>
+        <form id="pubdisc-form" method="POST">
+            <button type="submit" class="btn btn-primary btn-large pubdisc-btn" name="btn" value="publish">Publish on
+                tanDev</button>
 
-        <button type="submit" class="btn btn-primary btn-large pubdisc-btn" name="btn" value="discard">Discard
-            changes</button>
-
+            <button type="submit" class="btn btn-primary btn-large pubdisc-btn" name="btn" value="discard">Discard
+                changes</button>
+        </form>
     </div>
 </div>
 {% endif %}
