--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1222,4 +1222,21 @@ ul ul a {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.52);
   -webkit-font-smoothing: antialiased;
 }
+
+.username {
+  position: absolute;
+  top: 0;
+  margin-top: 5vh;
+  left: 0;
+  font-weight: 700;
+  color: #1C2541;
+}
+
+.district {
+  margin-top: 10vh;
+}
+
+.user-description {
+  font-family: Roboto, sans-serif;
+}
 /*# sourceMappingURL=main.css.map */
