--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -41,11 +41,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
                 <div class="user-description">
-                    <h1> {{user.username}}</h1>
+                    <h1 class="username"> {{user.username}}</h1>
                     <h6>{{user.shortDescription}}</h6>
-                    <h5>District:</h5>{{user.district}}
+                    <h6 class="district"><i class="fas fa-location-arrow"></i> District: {{user.district}}</h6>
                 </div>
             </div>
         </div>
