--- a/static/scss/_user_details.scss
+++ b/static/scss/_user_details.scss
@@ -5,7 +5,6 @@
 }
 
 .user-content {
-    padding: 5%;
     background: #fff;
     box-shadow: 0px 0px 4px 0px #b0b3b7;
 }
@@ -21,6 +20,7 @@
     width: auto;
     max-width: 80%;
     max-height: 80%;
+    margin-top: 5vh;
 }
 
 .user-description {
@@ -121,7 +121,19 @@ margin-top: 5vh;
 left: 0;
 font-weight: 700;
 color: $teal;
+animation: textshadow 8s infinite alternate; 
 }
+
+@keyframes textshadow {
+	0%   { text-shadow: 1px 1px 0px #333 }
+	10%   { text-shadow: 3px 3px 2px #333 }
+	20%  { text-shadow: 9px 10px 6px #999 }
+	40%  { text-shadow: 10px 15px 6px #ccc }
+	60%  { text-shadow: 0px 10px 4px #ccc }
+	80%  { text-shadow: -10px 8px 3px #ccc }
+	100%  { text-shadow: 1px 5px 1px #eee }
+}
+
 
 .district {
 margin-top: 10vh;
@@ -129,4 +141,41 @@ margin-top: 10vh;
 
 .user-description {
     font-family: Roboto, sans-serif;
+}
+
+.profile-row {
+    padding: 2rem;
+    color: white;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.skill-row {
+    background-color: $darkblue;
+}
+.des-skill-row {
+    background-color: $brightmidblue;
+}
+
+.skill-tags {
+    background-color: $brightmidblue;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    padding: 0.5rem;
+    display: inline-block;
+}
+
+.des-skills-row {
+    padding: 2rem;
+
+    background-color: $darkblue;
+    color: white;
+}
+
+.des-skill-tags {
+    background-color: $darkblue;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    padding: 0.5rem;
+    display: inline-block;
 }
