--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -45,24 +45,24 @@
                 <div class="user-description">
                     <h1 class="username"> {{user.username}}</h1>
                     <h6>{{user.shortDescription}}</h6>
-                    <h6 class="district"><i class="fas fa-location-arrow"></i> District: {{user.district}}</h6>
+                    <h6 class="district"><i class="fas fa-map-marker-alt"></i> District: {{user.district}}</h6>
                 </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2">
+        <div class="row skill-row profile-row">
+            <div class="col-3">
                 <i class="fa fa-code"></i>
-                <h5>Skills</h5>
+                <h5 class="d-inline">Skills</h5>
 
             </div>
 
 
 
-            <div class="col-10">
+            <div class="col-9">
 
                 {% for skill in user.skills %}
-                <span class="tags">{{ skill }}</span>
+                <span class="skill-tags">{{ skill }}</span>
 
                 {% endfor %}
 
@@ -70,26 +70,24 @@
         </div>
 
 
-        <div class="row">
-            <div class="col-2">
+        <div class="row des-skill-row profile-row">
+            <div class="col-3">
                 <i class="fas fa-search"></i>
-                <h5>Desired skills</h5>
+                <h5 class="d-inline">Desired skills</h5>
 
             </div>
 
-
-
-            <div class="col-10">
+            <div class="col-9">
 
                 {% for skill in user.desiredSkills %}
-                <span class="tags">{{ skill }}</span>
+                <span class="des-skill-tags">{{ skill }}</span>
 
                 {% endfor %}
 
             </div>
         </div>
 
-        <div class="row">
+        <div class="row profile-row">
 
             <div class="col-2">
                 <i class="fas fa-at"></i>
