--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <div class="col-md-6 d-flex header-col justify-content-center">
                 <div class="user-description">
                     <h1 class="username"> {{user.username}}</h1>
                     <h6>{{user.shortDescription}}</h6>
