--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1107,13 +1107,12 @@ ul ul a {
   margin-top: 5vh;
 }
 
-.user-description {
-  text-align: left;
-}
-
-.user-description p {
-  font-weight: 600;
-  font-size: 30px;
+@media (min-width: 768px) {
+  .header-col {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .tags {
@@ -1234,6 +1233,16 @@ ul ul a {
           animation: textshadow 8s infinite alternate;
 }
 
+@media (max-width: 768px) {
+  .username {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 0;
+  }
+}
+
 @-webkit-keyframes textshadow {
   0% {
     text-shadow: 1px 1px 0px #333;
@@ -1288,6 +1297,14 @@ ul ul a {
 
 .user-description {
   font-family: Roboto, sans-serif;
+  text-align: left;
+}
+
+@media (max-width: 768px) {
+  .user-description {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
 }
 
 .profile-row {
