--- a/static/scss/_user_details.scss
+++ b/static/scss/_user_details.scss
@@ -1,12 +1,17 @@
 .user-wrapper {
     padding: 6%;
     text-align: center;
-    height: 180vh;
+    height: auto;
+    position: relative;
 }
 
 .user-content {
     background: #fff;
     box-shadow: 0px 0px 4px 0px #b0b3b7;
+
+    @media (max-width: $bp-mobile) {
+        height: 200vh;
+    }
 }
 
 .user-image {
@@ -168,12 +173,15 @@ margin-top: 10vh;
     background-color: $brightmidblue;
 }
 
-.skill-tags {
-    background-color: $brightmidblue;
+.tags {
     margin-left: 1rem;
     margin-top: 1rem;
     padding: 0.5rem;
     display: inline-block;
+}
+
+.skill-tags {
+    background-color: $brightmidblue;
 }
 
 .des-skills-row {
@@ -185,8 +193,31 @@ margin-top: 10vh;
 
 .des-skill-tags {
     background-color: $darkblue;
-    margin-left: 1rem;
-    margin-top: 1rem;
-    padding: 0.5rem;
-    display: inline-block;
 }
+
+.comm-row {
+    background-color: $darkblue;
+}
+
+.comm-tags {
+    background-color: $brightmidblue;
+    display: block;
+    width: auto;
+}
+
+.other-row {
+    background-color: $brightmidblue;
+}
+
+.other-tags {
+background-color: $darkblue;
+}
+
+.contact-row {
+    color: black;
+}
+
+.published-row {
+    color: black;
+}
+
