--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -62,13 +62,13 @@
 
                 <li class="nav-item dropdown main-nav-item" id="navAccount">
                     <a class="nav-link hvr-bounce-in dropdown-toggle"
-                        href="{{url_for('myprofile', username=session['username'])}}" role="button"
+                        href="{{url_for('profile', username=session['username'])}}" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="navAccount">
                         My Account</a>
 
                     <div class="dropdown-menu" id="account-dropdown" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" id="dropdownProfile"
-                            href="{{url_for('myprofile', username=session['username'])}}"><i class="fas fa-users"></i> My Profile</a>
+                            href="{{url_for('profile', username=session['username'])}}"><i class="fas fa-users"></i> My Profile</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-heart"></i> My Favorites</a>
                         <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
                         <a class="dropdown-item" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt"></i> Logout</a>
