--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -325,7 +325,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="preview">Preview your Profile</button>
+        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="save">Save Changes</button>
 
         </form>
 
